@@ -14,12 +14,51 @@
 #include <pci/pci.h>
 #include <pci/devicetree.h>
 
-bool pci_device_exists(uint8_t bus, uint8_t device){
-	if (pci_header_read_vendor(bus, device) == 0xFFFF){
+pci_device_t fill_pci_device(uint8_t bus, uint8_t device, uint8_t function){
+	// ensure the given device actually exists BEFORE sending it to this function
+	
+	pci_device_t tmp;
+	
+	tmp.bus = bus;
+	tmp.device = device;
+	tmp.function = function;
+	tmp.pci_class = pci_header_read_class(bus, device, function);
+	tmp.pci_subclass = pci_header_read_subclass(bus, device, function);
+	
+	return tmp;
+}
+
+bool pci_device_exists(uint8_t bus, uint8_t device, uint8_t function){
+	if (pci_header_read_vendor(bus, device, function) == 0xFFFF){
 		return false;
 	} else {
 		return true;
 	}
+}
+
+void pci_found_device(uint8_t bus, uint8_t device, uint8_t function){
+	uint8_t i;
+	
+	num_pci_devices++;
+	
+	if (!pci_devices){
+		pci_devices = kmalloc(sizeof(pci_device_t) * num_pci_devices);
+	} else {
+		pci_devices = krealloc(pci_devices, sizeof(pci_device_t) * num_pci_devices);
+	}
+	
+	pci_devices[num_pci_devices - 1] = fill_pci_device(bus, device, function);
+	kprintf("PCI device found at %#hX:%#hX:%#hX, class %#hX.%#hX\n", pci_devices[num_pci_devices - 1].bus, pci_devices[num_pci_devices - 1].device, pci_devices[num_pci_devices - 1].function, pci_devices[num_pci_devices - 1].pci_class, pci_devices[num_pci_devices - 1].pci_subclass);
+	
+	if ((pci_header_read_type(bus, device, function) & 0x80) == 0x80){
+		for (i = 1; i < 8; i++){
+			if (pci_device_exists(bus, device, i)){
+				pci_found_device(bus, device, i);
+			}
+		}
+	}
+	
+	return;
 }
 
 void pci_scan(){
@@ -27,10 +66,11 @@ void pci_scan(){
 	uint32_t register_dword;
 	uint16_t device_id, vendor_id;
 	uint8_t class_code, subclass_code, header_code;
+	uint16_t i;
 	
 	kprintf("Scanning for PCI devices...\n");
 	
-	for (bus = 0; bus < 256; bus++){
+	/*for (bus = 0; bus < 256; bus++){
 		for (device = 0; device < 32; device++){
 			for (function = 0; function < 8; function++){
 				asm_out_d(PCI_CONFIG_ADDRESS_PORT, pci_config_address_build(bus, device, function, 0, 1));
@@ -55,10 +95,11 @@ void pci_scan(){
 				}
 			}
 		}
+	}*/
+	
+	for (i = 0; i < 256; i++){
+		pci_scan_bus(i);
 	}
-	
-	
-	pci_scan_bus(0);
 	
 	return;
 }
@@ -67,12 +108,13 @@ void pci_scan_bus(uint8_t bus){
 	uint8_t i;
 	
 	for (i = 0; i < 32; i++){
-		if (!pci_device_exists(bus, i)){
-			continue;
+		if (pci_device_exists(bus, i, 0)){
+			pci_found_device(bus, i, 0);
 		}
 		
-		
 	}
+	
+	return;
 }
 
 #endif
